<resources>
    <string name="app_name">Zalo Pay</string>
    <string name="zpw_redpackage_app_id">6</string>
    <string name="app_service_id">15</string>
    <string name="allow_use_fingerprint_feature">1</string>
    <string name="allow_use_send_log_on_transactionfail">1</string>
    <string name="payment_success_label">Giao dịch thành công</string>
    <string name="zpw_string_merchant_creditcard_3ds_url_prefix">pay/success?orderNo</string>
    <string name="zpw_string_pay_domain">123pay.vn</string>
    <string name="zpw_string_error_code_name_not_resolved">net::ERR_NAME_NOT_RESOLVED</string>
    <string name="zpw_string_error_code_timeout">net::ERR_TIMED_OUT</string>
    <string name="zpw_string_error_code_disconnected">net::ERR_INTERNET_DISCONNECTED</string>
    <string name="zpw_string_error_code_timeout_connection">net::ERR_CONNECTION_TIMED_OUT</string>
    <string name="zpw_string_error_friendlymessage_name_not_resolved">Lỗi không phân giải được domain.\n Vui lòng thử lại!</string>
    <string name="zpw_string_error_friendlymessage_timeout">Lỗi tải trang timeout.\n Vui lòng thử lại!</string>
    <string name="zpw_string_error_friendlymessage_end_transaction">Giao dịch đã kết thúc. Vui lòng thực hiện lại giao dịch!</string>
    <string name="percent_ontablet">0.5</string>
    <string name="percent_ondefault">0.8</string>
    <string name="zpw_font_regular">Roboto-Regular</string>
    <string name="zpw_font_medium">Roboto-Medium</string>
    <string name="zpw_font_unisec">UnisectVnu</string>
    <string name="zpw_string_transaction_expired">Thời gian giao dịch hết hiệu lực.\nVui lòng thực hiện lại giao dịch!</string>
    <string name="zpw_string_params_wrong">Thông tin thanh toán không hợp lệ.</string>
    <string name="zpw_not_allow_payment_app">Ứng dụng chưa được phép giao dịch.\nVui lòng chọn ứng dụng khác.</string>
    <string name="sdk_creditcard_label">%s ••• </string>
    <string name="sdk_card_generic_label">%s ••• </string>
    <string name="sdk_card_default_label">Thẻ đã liên kết ••• </string>
    <string name="zpw_string_all_channel_maintenance">Kênh thanh toán đang bảo trì.</string>
    <string name="zpw_string_alert_min_amount_input">Số tiền giao dịch tối thiểu là %s VND</string>
    <string name="zpw_string_alert_max_amount_input">Số tiền giao dịch tối đa là %s VND</string>
    <string name="zingpaysdk_alert_transaction_success">Thanh toán thành công</string>
    <string name="zingpaysdk_alert_processing">Xử lý giao dịch</string>
    <string name="zingpaysdk_alert_checking">Kiểm tra giao dịch</string>
    <string name="zingpaysdk_alert_processing_otp">Kiểm tra mật khẩu giao dịch</string>
    <string name="zingpaysdk_alert_processing_bank">Xử lý với ngân hàng</string>
    <string name="zingpaysdk_alert_get_status">Nhận kết quả  giao dịch</string>
    <string name="zingpaysdk_alert_process_view">Tạo màn hình</string>
    <string name="zingpaysdk_alert_transition_screen">Chuyển trang</string>
    <string name="zingpaysdk_alert_processing_check_app_info">Kiểm tra thông tin ứng dụng</string>
    <string name="zingpaysdk_alert_processing_loading_resource">Khởi tạo dữ liệu ứng dụng</string>
    <string name="zingpaysdk_confirm_quit_rescan_qrcode">Giao dịch sẽ bị hủy,cần tạo lại giao dịch từ đầu.\n Bạn thật sự muốn thoát ?</string>
    <string name="sdk_quit_pay_confirm_text">Bạn có chắc muốn hủy thanh toán này không?</string>
    <string name="sdk_quit_tranfer_confirm_text">Bạn có chắc muốn hủy chuyển tiền không?</string>
    <string name="sdk_quit_topup_confirm_text">Bạn có chắc muốn hủy nạp tiền không?</string>
    <string name="sdk_quit_withdraw_confirm_text">Bạn có chắc muốn hủy rút tiền không?</string>
    <string name="sdk_confirm_quit_link_account">Bạn có muốn hủy toàn bộ thao tác ?</string>
    <string name="zpw_confirm_quit_loadsite">Bạn đã chọn BACK nhưng giao dịch vẫn đang xử lý.\nBạn thật sự muốn thoát?</string>
    <string name="zpw_string_load_website_timeout_message">Dữ liệu chưa tải xong, vui lòng kiểm tra lại kết nối mạng!</string>
    <string name="zingpaysdk_alert_processing_ask_to_retry">Giao dịch vẫn còn đang xử lý.\nBạn có muốn tiếp tục kiểm tra trạng thái giao dịch?</string>
    <string name="zingpaysdk_alert_error_networking_ask_to_retry">Không thể kết nối tới Zalo Pay, vui lòng kiểm tra kết nối mạng.\nBạn có muốn thử lại?</string>
    <string name="zpw_error_transaction_duplicate_message">Giao dịch chưa hoàn thành.\nVui lòng thực hiện lại giao dịch!</string>
    <string name="sdk_fail_trans_status">Giao dịch đang xử lý. Vui lòng kiểm tra kết quả giao dịch trong phần Lịch Sử Giao Dịch sau ít phút</string>
    <string name="sdk_fail_trans_status_link">Liên kết đang xử lý. Vui lòng kiểm tra kết quả trong phần Liên Kết Thẻ sau ít phút</string>
    <string name="zingpaysdk_alert_no_connection">Không có kết nối internet.\nVui lòng kiểm tra kết nối mạng!</string>
    <string name="zingpaysdk_alert_network_error">Vui lòng kiểm tra kết nối mạng và thử lại!</string>
    <string name="zpw_alert_networking_off_in_transaction">Mạng đã tắt. Vui lòng bật mạng và thực hiện lại giao dịch</string>
    <string name="sdk_alert_network_onfline_submitorder">Mạng đã tắt, vui lòng kiểm tra trạng thái giao dịch trong phần Lịch Sử Giao Dịch sau ít phút</string>
    <string name="zpw_alert_network_error_loadappinfo">Mạng không ổn định, không kiểm tra được thông tin app.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_network_error_loadbanklist">Mạng không ổn định, không tải được thông tin ngân hàng.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_network_error_loadplatforminfo">Mạng không ổn định, không tải được thông tin platform.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_network_error_loadmapcardlist">Mạng không ổn định, không tải được thông tin thẻ đã lưu.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_network_error_loadmapbankaccountlist">Mạng không ổn định, không tải được thông tin tài khoản ngân hàng đã liên kết.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_network_error_verifymapcard">Mạng không ổn định, không thể liên kết thẻ.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_network_error_submitbankaccount">Mạng không ổn định, không thể liên kết tài khoản.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_network_error_removemapcard">Xóa liên kết không thành công. Vui lòng thử lại sau ít phút!</string>
    <string name="zpw_alert_network_error_authenpayer">Mạng không ổn định,không thể xác thực thông tin otp.\nVui lòng kiểm trả kết nối mạng và thử lại!</string>
    <string name="sdk_alert_generic_error">Lỗi khởi tạo dữ liệu. Vui lòng thực hiện lại giao dịch!</string>
    <string name="sdk_alert_generic_init_resource">Lỗi khởi tạo nguồn thông tin. Vui lòng thực hiện lại giao dịch!</string>
    <string name="sdk_alert_networking_off_generic">Mạng đã tắt, không kiểm tra được trạng thái giao dịch, vui lòng kiểm tra kết quả giao dịch trong phần Lịch Sử Giao Dịch sau ít phút!</string>
    <string name="sdk_error_generic_submitorder">Không kiểm tra được trạng thái giao dịch, vui lòng kiểm tra kết quả giao dịch trong phần Lịch Sử Giao Dịch sau ít phút!</string>
    <string name="sdk_error_not_submit_order">Hóa đơn chưa được gửi đi, vui lòng thực hiện lại giao dịch</string>
    <string name="zpw_generic_error">Có lỗi xảy ra.Vui lòng thử lại</string>
    <string name="sdk_alert_networking_off_in_link_account">Mạng đã tắt. Vui lòng bật mạng và thực hiện lại liên kết tài khoản</string>
    <string name="sdk_alert_networking_off_in_unlink_account">Mạng đã tắt. Vui lòng bật mạng và thực hiện lại hủy liên kết tài khoản</string>
    <string name="zpw_alert_network_error_getappinfo">Mạng không ổn định, không kiểm tra được thông tin. Vui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_networking_error_check_status">Giao dịch đang xử lý. Vui lòng kiểm tra kết quả giao dịch trong phần Lịch Sử Giao Dịch sau ít phút</string>
    <string name="zpw_alert_process_error">Lỗi xử lý dữ liệu.Vui lòng xem lịch sử để kiểm tra trạng thái giao dịch</string>
    <string name="zpw_alert_order_not_submit">Mạng không ổn định, giao dịch chưa được gửi đi. Vui lòng kiểm tra kết nối mạng và thử lại!</string>
    <string name="sdk_config_invalid">Cấu hình kênh giao dịch không còn hiệu lực. Vui lòng chọn kênh giao dịch khác!</string>
    <string name="zingpaysdk_alert_input_error">Dữ liệu giao dịch không hợp lệ</string>
    <string name="zpw_error_paymentinfo">Dữ liệu không còn hiệu lực.\nVui lòng thực hiện lại thao tác.</string>
    <string name="zingpaysdk_alert_context_error">Ngữ cảnh ứng dụng đã kết thúc.\nVui lòng đóng ứng dụng và khởi động lại ứng dụng để thực hiện lại!</string>
    <string name="zingpaysdk_alert_title_nointernet">HƯỚNG DẪN</string>
    <string name="zingpaysdk_alert_content_nointernet"><![CDATA[<b>Bật Wi-fi</b>: Chọn "<b>Settings</b>" (cài đặt) -" <b>Wi-fi</b>" và chọn mạng Wi-fi có sẵn.<br></br> <br></br><b>Bật 3G</b>: Chọn "<b>Settings</b>" (cài đặt) - "<b>Mobile Networks</b>" (di động) và bật "<b>Mobile Data</b>" (dữ lệu di động).]]></string>
    <string name="zpw_string_alert_permission_sms_not_allow">Bạn đã không cấp quyền nhận tin nhắn !\nỨng dụng sẽ không thể tự động nhận tin nhắn khi có OTP ngân hàng tới.</string>
    <string name="zpw_string_error_storage">Thiết bị của bạn không đủ dung lượng để lưu trữ dữ liệu ứng dụng.\nVui lòng thử lại sau khi đã giải phóng không gian vùng nhớ!</string>
    <string name="zingpaysdk_alert_network_error_download_resource">Không thể tải dữ liệu ứng dụng.\nVui lòng kiểm tra kết nối mạng hoặc thử lại sau vài phút!</string>
    <string name="zpw_string_error_parse_web">Không thể xử lý với ngân hàng, có thể do ngân hàng đang bảo trì.\nXin bạn vui lòng quay lại sau ít phút!</string>
    <string name="zpw_string_alert_submit_order">Đang gửi hóa đơn</string>
    <string name="zingpaysdk_missing_mac_info">Thông tin đơn hàng không hợp lệ.</string>
    <string name="zingpaysdk_missing_app_pmt_info">Thiếu thông tin đơn hàng.</string>
    <string name="zingpaysdk_missing_app_user">Thiếu thông tin user trong paymen info.</string>
    <string name="zingpaysdk_invalid_app_trans">Thiếu thông tin trong paymen info.</string>
    <string name="zingpaysdk_invalid_app_time">Thời gian không hợp lệ.</string>
    <string name="zingpaysdk_invalid_app_amount">Số tiền không hợp lệ.</string>
    <string name="zingpaysdk_invalid_user_id_user_name">Thông tin tài khoản Zalo Pay không hợp lệ</string>
    <string name="zingpaysdk_invalid_token">Token không hợp lệ</string>
    <string name="sdk_invalid_missing_linkaccInfo">Thiếu thông tin loại ngân hàng liên kết</string>
    <string name="zalopay_invalid_app_id">App id không hợp lệ</string>
    <string name="zpw_string_title_confirm_transaction">HÌNH THỨC XÁC NHẬN GIAO DỊCH</string>
    <string name="zpw_string_sms">SMS</string>
    <string name="zpw_string_token">Token</string>
    <string name="zpw_string_otp_hint">Nhập mã OTP</string>
    <string name="zpw_string_token_hint">Nhập Token</string>
    <string name="dialog_choose_again_button">NGUỒN KHÁC</string>
    <string name="dialog_agree_button">ĐỒNG Ý</string>
    <string name="zpw_string_unreg_vcb_title">NHẬP THÔNG TIN</string>
    <string name="zpw_string_linkacc_password_hint">Mật khẩu</string>
    <string name="zpw_string_linkacc_phone_hint">Số điện thoại</string>
    <string name="zpw_warning_vietcombank_select_linkcard_payment">Bạn đã liên kết tài khoản của <b>Vietcombank</b>. Hãy chọn tài khoản liên kết để giao dịch.</string>
    <string name="sdk_appname_title">Dịch vụ</string>
    <string name="sdk_order_fee_title">Phí giao dịch</string>
    <string name="sdk_order_fee_free">Miễn phí</string>
    <string name="sdk_trans_time_title">Thời gian</string>
    <string name="sdk_trans_id_title">Mã giao dịch</string>
</resources>