<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_sweet_shadow"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imInfoIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/zpw_padding_5"
        android:layout_marginTop="@dimen/zpw_padding_20"
        android:src="@drawable/ic_information" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/zpw_card_support_bank_padding"
        android:text="@string/zpw_warning_vietcombank_select_linkcard_payment"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_color_bold" />

    <ListView
        android:id="@+id/channelListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/zpw_bg_top_bottom_side_border"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:scrollbars="none" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right">

        <vn.com.zalopay.wallet.view.custom.ZPWRippleButton
            android:id="@+id/selectOtherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/selectButton"
            android:paddingBottom="@dimen/zpw_padding_button"
            android:paddingLeft="@dimen/zpw_padding_15"
            android:paddingRight="@dimen/zpw_padding_15"
            android:paddingTop="@dimen/zpw_padding_button"
            android:text="@string/dialog_choose_again_button"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_primary" />

        <vn.com.zalopay.wallet.view.custom.ZPWRippleButton
            android:id="@+id/selectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/zpw_padding_button"
            android:paddingLeft="@dimen/zpw_padding_15"
            android:paddingRight="@dimen/zpw_padding_15"
            android:paddingTop="@dimen/zpw_padding_button"
            android:text="@string/dialog_agree_button"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_primary" />

    </RelativeLayout>

</LinearLayout>
