<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/sdk_margin_left_right"
    android:layout_marginRight="@dimen/sdk_margin_left_right"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/appname_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdk_margin_top_bottom"
        android:orientation="horizontal"
        android:padding="@dimen/sdk_margin_left_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sdk_appname_title"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />

        <TextView
            android:id="@+id/appname_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/item_detail_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sdk_margin_left_right"
        android:paddingRight="@dimen/sdk_margin_left_right">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/sdk_margin_top_bottom"
        android:paddingLeft="@dimen/sdk_margin_left_right"
        android:paddingRight="@dimen/sdk_margin_left_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sdk_order_fee_title"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />

        <TextView
            android:id="@+id/order_fee_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sdk_order_fee_free"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/sdk_margin_top_bottom"
        android:paddingLeft="@dimen/sdk_margin_left_right"
        android:paddingRight="@dimen/sdk_margin_left_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sdk_trans_time_title"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />

        <TextView
            android:id="@+id/transaction_time_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sdk_trans_id_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/sdk_margin_top_bottom"
        android:paddingLeft="@dimen/sdk_margin_left_right"
        android:paddingRight="@dimen/sdk_margin_left_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sdk_trans_id_title"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />

        <TextView
            android:id="@+id/transaction_id_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />
    </RelativeLayout>
</LinearLayout>